# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022 Intel Corporation

sources = files('tests.cpp', 'st_test.cpp', 'st20_test.cpp', 'st22_test.cpp',
                'st30_test.cpp', 'st40_test.cpp', 'dma_test.cpp', 'cvt_test.cpp',
                'st22p_test.cpp', 'st20p_test.cpp', 'test_util.cpp', 'sch_test.cpp',
                'st30p_test.cpp', 'noctx.cpp', 'St30pHandler.cpp', 'noctxTests.cpp')

ufd_sources = files('ufd_test.cpp', 'ufd_loop_test.cpp', 'test_util.cpp')

upl_sources = files('upl_test.cpp', 'upl_loop_test.cpp', 'test_util.cpp')